--- a/TODO
+++ b/TODO
@@ -1,28 +1,33 @@
 Coming up next:
-- rework lib{q2,h2} packet assembly code
 - implement libq3 parser in lib{q2,h2} for player info etc.
 - maybe rework the socket/interface binding code
-- set vim modelines? /* vim:sw=4:ts=4: */
-- cleanup libqw
 - docs/PROTOCOLS: add stef1 packets
-- write test suite
-- libq3: recover from realloc() error
+- H2 test suite
+	- heartbeat/query/servers
+	- ping/ack
+	- heartbeat/query/servers/shutdown
+- Q3 test suite
+	- heartbeat/getservers/getserversResponse/2xheartbeat
+- QW test suite
+	- k/l
+	- a/c/d
+	- a/c/d/C
+- D3 test suite
+- EF test suite
+- HexenWorld plugin
+- more detailed packet description in docs/PROTOCOLS
+  (e.g. when are the packets sent?, what is their purpose?)
 
 Near future:
 - implement some anti spamming/DoS or throttling system to prevent DoS attacks
 - implement stub functions for protocols other than udp
-- ascii version of docs/masterserver_thread_system.dia
-- signal handler
-- specify as which user masterserver should run
 - Damn UT is using TCP for communication with master server.
   Allow plugins to use protocols other than UDP for communication.
-- autotools + FreeBSD support
 - process packets in parallel
 - add more qw/q2/q3 based games
 - docs/PROTOCOLS: check which options the stef1 master honors in getservers
 - "The Sega.Net master server address is: "master.id-q3a.games.sega.net: 27950"
 - check out the "populated=1" string gamespy3d sends to q2 master
-- test plugins with server browsers other than qstat/xqf
 
 More or less far future:
 - Support for other games:
@@ -34,7 +39,7 @@ More or less far future:
 - libq3: implement player statistics(?)
 - include a database interface in masterserver
   (the one from devil)
-- use writev() or something different for sending out packets ?
+- Check RakNet Master source code
 
-Last modified: 2004-04-26 by Andre' Schulz
+Last modified: 2005-05-21 by Andre' Schulz
 
